# SecurityTool

./: .gitignore  CMakeLists.txt  README.md
go-security-tool/: go.mod
go-security-tool/cmd/kimura-san/: main.go
go-security-tool/pkg/cleaner/: cleaner.go  docker_cleaner.go  junk_cleaner.go
go-security-tool/pkg/engine/: engine.go
go-security-tool/pkg/logger/: logger.go
scripts/: KimuraSanCleanup.js  SecurityTool.ps1
v1/: README.md
v1/include/: SecurityEngine.h
v1/scripts/: Install.ps1  KimuraSan.ps1  RegistryMonitor.ps1
v1/src/: SecurityEngine.cpp
v2/: README.md  go.mod
v2/cmd/kimura-san/: main.go
v2/pkg/engine/: engine.go
v2/pkg/scheduler/: scheduler.go
